--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@vueuse/core": "^13.2.0",
     "pinia": "^3.0.1",
-    "vue": "^3.5.13",
+    "vue": "^3.5.14",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
