--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
     "@vueuse/core": "^13.2.0",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.6",
     "vue": "^3.5.14",
     "vue-router": "^4.5.0"
   },
