--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist --cname davidarmes.com "
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
